# truffles

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci-tests.yml  release-please.yml
examples/: extract_list.ipynb
src/truffle/: __init__.py  t_locator.py  t_page.py  tlocator.py  tpage.py
src/truffle/context/: __init__.py  base.py  exceptions.py  marker.py  state.py
src/truffle/context/implementations/: memory.py
src/truffle/functions/: base.py
src/truffle/models/: __init__.py  config.py  exceptions.py
src/truffle/tools/: base.py
src/truffle/tools/list_detector/: __init__.py  list_detector.py  utils.py
src/truffle/tools/list_detector/strategies/: base.py  item_strategy.py  llm_strategy.py  wrapper_strategy.py
src/truffle/utils/: wrap.py
src/truffles/: __init__.py  t_locator.py  t_page.py
src/truffles/context/: __init__.py  base.py  exceptions.py  marker.py  state.py
src/truffles/context/implementations/: memory.py
src/truffles/core/: assertions.py  enhanced.py  tool_manager.py
src/truffles/enhanced/: locator.py  page.py
src/truffles/models/: __init__.py  config.py  default_model.py  exceptions.py
src/truffles/tasks/: __init__.py  listing_task.py  task.py
src/truffles/tools/: base.py
src/truffles/tools/detect_by_prompt/: get_by_prompt.py  messages.py  recursor.py
src/truffles/tools/list_detector/: list_detector.py  utils.py
src/truffles/tools/list_detector/strategies/: base.py  item_strategy.py  llm_strategy.py  wrapper_strategy.py
src/truffles/tools/md_gen/: exceptions.py  markdown_gen.py
src/truffles/tools/structure_locator/: exceptions.py  messages.py  structure_locator.py
src/truffles/utils/: locator_ops.py  wrap.py
src/truffles/utils/ax_tree/: ax_tree_generate.js  generate.py
tests/: test_version.py
